<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/lbl1"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ff0000" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="300dp"
        android:layout_height="204dp"
        android:text="@string/nothing"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Start" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="276dp"
        android:layout_height="30dp"
        android:text="@string/nothing" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Option" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="276dp"
        android:layout_height="30dp"
        android:text="@string/nothing" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/About" />

    <TextView
        android:id="@+id/lblHigh"
        android:layout_width="302dp"
        android:layout_height="45dp"
        android:text="@string/High"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>